<resources>
    <string name="app_name">Merchant</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_products">Products</string>
    <string name="menu_ordersummary">OrderSummary</string>
    <string name="row1col1">Order ID</string>
    <string name="row1col2">Customer Name</string>
    <string name="row1col3">Total Price</string>
    <string name="row1col4">View Details</string>
    <string name="row2col1">1</string>
    <string name="row2col2">Ben</string>
    <string name="row2col3">596.00</string>
    <string name="row2col4"><![CDATA[<button>]]></string>

    <string-array name="weather">
        <item>Hot</item>
        <item>Cold</item>
    </string-array>

    <string-array name="category">
        <item>Western</item>
        <item>Japanese</item>
        <item>Chinese</item>
        <item>Fast Food</item>
        <item>Burgers</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>