<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_deals"
            android:icon="@drawable/ic_deal"
            android:title="Deals" />
        <item
            android:id="@+id/nav_voucher"
            android:icon="@drawable/ic_voucher"
            android:title="Vouchers" />
        <item
            android:id="@+id/nav_special"
            android:icon="@drawable/ic_price_tag"
            android:title="Special Tags" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/baseline_file_present_24"
            android:title="Documents"/>
<!--        <item-->
<!--            android:id="@+id/nav_reports"-->
<!--            android:icon="@drawable/ic_price_tag"-->
<!--            android:title="Reports" />-->
    </group>
</menu>