<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.merchant.activities.ui.Dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_nav_dashboard_to_nav_orders"
            app:destination="@id/nav_orders" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_products"
            app:destination="@id/nav_products" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_special"
            app:destination="@id/nav_special" />
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.merchant.activities.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_nav_orders_to_nav_ordersummary"
            app:destination="@id/nav_ordersummary" />
    </fragment>

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.merchant.activities.ui.slideshow.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_ordersummary"
        android:name="com.example.merchant.activities.ui.ordersummary.OrderSummaryFragment"
        android:label="@string/menu_ordersummary"
        tools:layout="@layout/fragment_order_summary" >
        <action
            android:id="@+id/action_nav_ordersummary_to_nav_orders"
            app:destination="@id/nav_orders" />
    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/nav_special"-->
<!--        android:name="com.example.merchant.activities.ui.special.SpecialFragment"-->
<!--        android:label="special"-->
<!--        tools:layout="@layout/fragment_special" >-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_special"
        android:name="com.example.merchant.activities.ui.special.SpecialStatusFragment"
        android:label="special"
        tools:layout="@layout/fragment_special_status" >
    </fragment>
</navigation>